<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<!-- 	<EditText -->
<!--         android:id="@+id/edit_message" -->
<!--         android:layout_width="500dp" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:ems="10" -->
<!--         android:hint="@string/edit_message" -->
<!--         android:inputType="textPersonName" > -->

<!--         <requestFocus /> -->
<!--     </EditText> -->

<!--     <Button -->
<!--         android:id="@+id/button_send" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignBottom="@id/edit_message" -->
<!--         android:layout_toRightOf="@id/edit_message" -->
<!--         android:onClick="sendMessage" -->
<!--         android:text="@string/button_send" /> -->
    
<!--     <Button -->
<!--         android:id="@+id/click_me" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@id/edit_message" -->
<!--         android:layout_alignRight="@id/button_send" -->
<!--         android:layout_below="@id/edit_message" -->
<!--         android:text="@string/click_me" /> -->

<!--     <Button -->
<!--         android:id="@+id/access_shell" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@id/click_me" -->
<!--         android:layout_alignRight="@id/click_me" -->
<!--         android:layout_below="@id/click_me" -->
<!--         android:text="@string/access_shell" /> -->
    
<!--     <Button -->
<!--         android:id="@+id/twitter_sign_in" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@id/access_shell" -->
<!--         android:layout_alignRight="@id/access_shell" -->
<!--         android:layout_below="@id/access_shell" -->
<!--         android:text="@string/twitter_sign_in" /> -->
    
     <!-- Twitter Login Button -->
    <Button android:id="@+id/btnLoginTwitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_twitter"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"/>
     
    <!-- user name label -->
    <TextView android:id="@+id/lblUserName"
        android:textIsSelectable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_marginTop="30dip"/>
 
    <!-- label update status -->
    <TextView android:id="@+id/lblUpdate"
        android:text="@string/update_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:visibility="gone"/>
     
    <!-- Tweet EditText -->
    <EditText android:id="@+id/txtUpdateStatus"
        android:hint="@string/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:visibility="gone"/>
     
    <!-- Tweet Button -->
    <Button android:id="@+id/btnUpdateStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:visibility="gone"/>
     
    <!-- Twitter Logout button -->
    <Button android:id="@+id/btnLogoutTwitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_from_twitter"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:visibility="gone"/>
    

</RelativeLayout>




